[gd_scene load_steps=7 format=2]

[ext_resource path="res://npc/npc.gd" type="Script" id=1]
[ext_resource path="res://npc/skeleton/Skeleton Idle.png" type="Texture" id=2]
[ext_resource path="res://npc/skeleton/Skeleton Walk.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.11678
height = 11.9021

[sub_resource type="Animation" id=2]
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 3, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=3]
resource_name = "run"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteRun:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}

[node name="skeleton" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4.06853, 2.99826 )
shape = SubResource( 1 )

[node name="SpriteIdle" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 11

[node name="SpriteRun" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 13
frame = 8

[node name="SpriteDying" type="Sprite" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/run = SubResource( 3 )
